fixed overflow problem of skill cards on small screens

--- a/src/components/skillsarea/SkillArea.module.css
+++ b/src/components/skillsarea/SkillArea.module.css
@@ -28,7 +28,8 @@
     width: auto;
     flex-direction: column;
     flex-wrap: wrap;
-    align-content: flex-start;
+    align-content: flex-end;
+    align-items: flex-end;
     margin-right: var(--right-page-margin);
     background: var(--translucent-main-color);
     min-height: 400px;
@@ -36,6 +37,7 @@
 
 .skillRow {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     padding-left: 32px;
+    margin-right: 32px;
 }
